mag_8788 code: NIOS/Conditioner: Improved NIOS-batch file, projects are compiling without VisualGDB

--- a/rx_head_nios/rx_head_nios.vcxproj
+++ b/rx_head_nios/rx_head_nios.vcxproj
@@ -48,16 +48,20 @@
     <IntDir>$(ProjectDir)..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-soc|Win32'">
-    <NMakeForcedIncludes>$(ProjectDir)\gcc_Release.h;$(VISUALGDB_DIR)\gcc_compat.h;$(NMakeForcedIncludes)</NMakeForcedIncludes>
-    <NMakeBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /build "$(ProjectPath)" "/solution:$(ProjectPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeBuildCommandLine>
-    <NMakeCleanCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /clean "$(ProjectPath)" "/solution:$(ProjectPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeCleanCommandLine>
-    <NMakeReBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /rebuild "$(ProjectPath)" "/solution:$(ProjectPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeReBuildCommandLine>
-    <NMakeOutput>$(ProjectDir)rx_head_nios-Release.vgdbsettings</NMakeOutput>
+    <NMakeForcedIncludes>
+    </NMakeForcedIncludes>
+    <NMakeBuildCommandLine>..\Externals\altera\build_nios_from_vs.bat "$(ProjectDir)"</NMakeBuildCommandLine>
+    <NMakeCleanCommandLine>
+    </NMakeCleanCommandLine>
+    <NMakeReBuildCommandLine>..\Externals\altera\build_nios_from_vs.bat "$(ProjectDir)"</NMakeReBuildCommandLine>
+    <NMakeOutput>
+    </NMakeOutput>
     <IncludePath />
     <ReferencePath />
     <LibraryPath />
     <NMakeIncludeSearchPath />
-    <NMakePreprocessorDefinitions>__VisualGDB_CFG_Release;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
+    <NMakePreprocessorDefinitions>
+    </NMakePreprocessorDefinitions>
     <OutDir>$(ProjectDir)..\_out\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
