--- a/.gitignore
+++ b/.gitignore
@@ -22,26 +22,7 @@
 /bin/win10/Win10-Install.exe
 /bin/win10/Win10-RunOnce.exe
 /bin/win10/Win10-Startup.exe
-/rx_encoder_ctrl/fpga_def_enc.h.bak
-/rx_encoder_ctrl/version.c
-/rx_encoder_ctrl/version.txt
-/rx_fluid_ctrl/version.c
 /rx_fluid_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
-/rx_fluid_nios/software/rx_fluid_nios/mem_init/fluid_board_soc_onchip_memory_nios_cpu.hex
-/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_arm.sym
-/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.dat
-/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.sym
-/rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.elf
-/rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.map
-/rx_fluid_nios/software/rx_fluid_nios/version.c
-/rx_fluid_nios/software/rx_fluid_nios/version.txt
-/rx_fluid_nios/software/rx_fluid_nios_bsp/settings.bsp
-/rx_fluid_nios/software/rx_fluid_nios_bsp/summary.html
-/rx_head_cond/build.log
-/rx_head_cond/source/version.c
-/rx_head_cond/source/version.txt
-/rx_head_ctrl/version.c
-/rx_head_ctrl/version.txt
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.core/rx_head_nios.language.settings.xml
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/dialog_settings.xml
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
@@ -51,34 +32,26 @@
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/dialog_settings.xml
-/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_dp_ram_nios_arm.sym
-/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.dat
-/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.sym
 /rx_head_nios/software/rx_head_nios_bsp/settings.bsp
 /rx_head_nios/software/rx_head_nios_bsp/summary.html
-/rx_main_ctrl/version.c
-/rx_spooler_ctrl/version.c
-/rx_stepper_ctrl/version.c
-/.vs/RX-Project/v16
-/.vs - Copy/RX-Project/v16
-/CodeDB
-/rx_head_ctrl/.vs/rx_head_ctrl/v16
-/rx_head_ctrl/CodeDB
-/Externals/TinyXML/Release-soc
 /Externals/TinyXML/obj/Win32/Debug-lx
-/Externals/TinyXML/VisualGDBCache/TinyXML-Debug-lx/SysprogsSyncCache
-/Externals/TinyXML/VisualGDBCache/TinyXML-Release-lx/SysprogsSyncCache
-/rx_boot/VisualGDBCache/rx_boot-Release-lx/SysprogsSyncCache
 *.dep
 *.o
 *.cache
-/rx_common_lib/VisualGDBCache/rx_common_lib-Debug-lx/SysprogsSyncCache
-/rx_common_lib/VisualGDBCache/rx_common_lib-Release-lx/SysprogsSyncCache
 *.old
-/rx_common_lib/Release-soc
-/rx_digiprint_gui/.vs/rx_digiprint_gui/v16
-/rx_digiprint_gui/CodeDB
-/rx_digiprint_gui/obj
+*.bak
+*.sym
+*.dat
+*.hex
+*.elf
+*.map
+*.log
+SysprogsSyncCache
+Release-soc
+version.c
+version.txt
+v16
+CodeDB
 .vs
 _out
 _temp
