--- a/.gitignore
+++ b/.gitignore
@@ -22,18 +22,14 @@
 /bin/win10/Win10-Install.exe
 /bin/win10/Win10-RunOnce.exe
 /bin/win10/Win10-Startup.exe
-/rx_fluid_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+*.prefs
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.core/rx_head_nios.language.settings.xml
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/dialog_settings.xml
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
-/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.indexes/properties.index
-/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.markers
-/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios_bsp/.indexes/properties.index
-/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/dialog_settings.xml
 /rx_head_nios/software/rx_head_nios_bsp/settings.bsp
-/rx_head_nios/software/rx_head_nios_bsp/summary.html
+*/summary.html
 *.dep
 *.o
 *.cache
@@ -57,3 +53,8 @@ _out
 _temp
 obj
 VisualGDBCache
+*/org.eclipse.core.resources
+*/software/.metadata/.plugins/org.eclipse.cdt.core
+*.objdump
+org.eclipse.core.resources
+.log
