Cleaned Stepper Software Code of Textile -> added a File tx80x_wd.c Need to be tested

--- a/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj.filters
+++ b/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="dp803.c">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="tx80x_wd.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gcc_Debug.h">
@@ -175,6 +178,9 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="dp803.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="tx80x_wd.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
