--- a/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
+++ b/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="test.c" />
     <ClCompile Include="test_table.c" />
     <ClCompile Include="tx801.c" />
+    <ClCompile Include="tx80x_wd.c" />
     <ClCompile Include="txrob.c" />
     <ClCompile Include="version.c" />
   </ItemGroup>
@@ -231,6 +232,7 @@
     <ClInclude Include="test.h" />
     <ClInclude Include="test_table.h" />
     <ClInclude Include="tx801.h" />
+    <ClInclude Include="tx80x_wd.h" />
     <ClInclude Include="txrob.h" />
     <ClInclude Include="web.h" />
   </ItemGroup>
