--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,29 @@ VisualGDBCache
 *.objdump
 org.eclipse.core.resources
 .log
+/rx_fluid_nios/software/rx_fluid_nios_bsp/system.h
+/rx_fluid_nios/software/rx_fluid_nios_bsp/obj
+/rx_fluid_nios/software/rx_fluid_nios_bsp/.cproject
+/rx_fluid_nios/software/rx_fluid_nios_bsp/.project
+/rx_fluid_nios/software/rx_fluid_nios_bsp/alt_sys_init.c
+/rx_fluid_nios/software/rx_fluid_nios_bsp/create-this-bsp
+/rx_fluid_nios/software/rx_fluid_nios_bsp/libhal_bsp.a
+/rx_fluid_nios/software/rx_fluid_nios_bsp/linker.h
+/rx_fluid_nios/software/rx_fluid_nios_bsp/linker.x
+/rx_fluid_nios/software/rx_fluid_nios_bsp/Makefile
+/rx_fluid_nios/software/rx_fluid_nios_bsp/mem_init.mk
+/rx_fluid_nios/software/rx_fluid_nios_bsp/memory.gdb
+/rx_fluid_nios/software/rx_fluid_nios_bsp/public.mk
+/rx_fluid_nios/software/rx_fluid_nios_bsp/settings.bsp
+/rx_head_nios/software/rx_head_nios_bsp/system.h
+/rx_head_nios/software/rx_head_nios_bsp/obj
+/rx_head_nios/software/rx_head_nios_bsp/.cproject
+/rx_head_nios/software/rx_head_nios_bsp/.project
+/rx_head_nios/software/rx_head_nios_bsp/alt_sys_init.c
+/rx_head_nios/software/rx_head_nios_bsp/libhal_bsp.a
+/rx_head_nios/software/rx_head_nios_bsp/linker.h
+/rx_head_nios/software/rx_head_nios_bsp/linker.x
+/rx_head_nios/software/rx_head_nios_bsp/Makefile
+/rx_head_nios/software/rx_head_nios_bsp/mem_init.mk
+/rx_head_nios/software/rx_head_nios_bsp/memory.gdb
+/rx_head_nios/software/rx_head_nios_bsp/public.mk
