Solve build issue on SolutionDir and mismatch between Release and Release_Win32 Add also support of french MSBuild error messages

--- a/Externals/TinyXML/TinyXML.vcxproj
+++ b/Externals/TinyXML/TinyXML.vcxproj
@@ -357,8 +357,8 @@
     <NMakeForcedIncludes>$(ProjectDir)\gcc_Release-soc.h;$(VISUALGDB_DIR)\gcc_compat.h;$(NMakeForcedIncludes)</NMakeForcedIncludes>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(ProjectDir)..\..\_out\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)..\..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)_out\$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)_temp\$(MSBuildProjectName)\$(Configuration)_$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)_out\$(Configuration)_$(Platform)\</OutDir>
