rx_fluid_ctrl: Improved error messages

--- a/rx_fluid_ctrl/rx_fluid_ctrl.vcxproj
+++ b/rx_fluid_ctrl/rx_fluid_ctrl.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="gcc_Debug.h" />
     <ClInclude Include="gcc_Release-soc.h" />
     <ClInclude Include="nios_fluid.h" />
+    <ClInclude Include="rx_fluid_ctrl.h" />
     <ClInclude Include="version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
